force-app/main/default/objects/Student__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>TEXT(FLOOR(YEAR(TODAY())- YEAR( Date_of_Birth__c )))&amp; &quot; years old&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>