force-app/main/default/objects/Student__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <description>Select the course</description>
    <label>Courses</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stream__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B.Com</fullName>
            </value>
            <value>
                <fullName>B.E</fullName>
            </value>
            <value>
                <fullName>B.Sc</fullName>
            </value>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>M.COm</fullName>
            </value>
            <value>
                <fullName>M.Sc</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>