force-app/main/default/objects/Student__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Enter the valid email address.</description>
    <inlineHelpText>your email should contain the proper format.(e.g  abc@gmail.com)</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>