force-app/main/default/objects/Student__c/fields/Native_Language__c.field-meta.xml
<CustomField>
    <fullName>Native_Language__c</fullName>
    <formula>CASE( State__c, 
&quot;Maharashtra&quot;, &quot;Marathi&quot;, 
&quot;Uttar Pradesh&quot;,&quot;Hindi&quot;,
&quot;Madhya Pradesh&quot;,&quot; Hindi&quot;,
&quot;Rajasthan&quot;,&quot;Rajasthani&quot;,
&quot;Gujarat&quot;,&quot;Gujarati&quot;, 
&quot;Tamil Nadu&quot;,&quot;Tamil&quot;,&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Native Language</label>
    <type>Text</type>
</CustomField>