force-app/main/default/objects/Student__c/fields/Obtained_Marks__c.field-meta.xml
<CustomField>
    <fullName>Obtained_Marks__c</fullName>
    <description>Enter the marks you obtained should be in 3 digit.</description>
    <label>Obtained Marks</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>