force-app/main/default/objects/Student__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <formula>(Obtained_Marks__c / 720 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>