force-app/main/default/objects/Student__c/fields/Percentaged__c.field-meta.xml
<CustomField>
    <fullName>Percentaged__c</fullName>
    <description>Percentage of students</description>
    <label>Percentages</label>
    <length>6</length>
    <type>Text</type>
</CustomField>