force-app/main/default/objects/Student__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Andhra Pradesh</fullName>
                <isActive>false</isActive>
                <label>Andhra Pradesh</label>
            </value>
            <value>
                <fullName>Arunachal Pradesh</fullName>
                <isActive>false</isActive>
                <label>Arunachal Pradesh</label>
            </value>
            <value>
                <fullName>Assam</fullName>
                <isActive>false</isActive>
                <label>Assam</label>
            </value>
            <value>
                <fullName>Bihar</fullName>
                <isActive>false</isActive>
                <label>Bihar</label>
            </value>
            <value>
                <fullName>Chhattisgarh</fullName>
                <isActive>false</isActive>
                <label>Chhattisgarh</label>
            </value>
            <value>
                <fullName>Goa</fullName>
                <isActive>false</isActive>
                <label>Goa</label>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Haryana</fullName>
                <isActive>false</isActive>
                <label>Haryana</label>
            </value>
            <value>
                <fullName>Himachal Pradesh</fullName>
                <isActive>false</isActive>
                <label>Himachal Pradesh</label>
            </value>
            <value>
                <fullName>Jharkhand</fullName>
                <isActive>false</isActive>
                <label>Jharkhand</label>
            </value>
            <value>
                <fullName>Karnataka</fullName>
                <isActive>false</isActive>
                <label>Karnataka</label>
            </value>
            <value>
                <fullName>Kerala</fullName>
                <isActive>false</isActive>
                <label>Kerala</label>
            </value>
            <value>
                <fullName>Madhya Pradesh</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Manipur</fullName>
                <isActive>false</isActive>
                <label>Manipur</label>
            </value>
            <value>
                <fullName>Meghalaya</fullName>
                <isActive>false</isActive>
                <label>Meghalaya</label>
            </value>
            <value>
                <fullName>Mizoram</fullName>
                <isActive>false</isActive>
                <label>Mizoram</label>
            </value>
            <value>
                <fullName>Nagaland</fullName>
                <isActive>false</isActive>
                <label>Nagaland</label>
            </value>
            <value>
                <fullName>Odisha</fullName>
                <isActive>false</isActive>
                <label>Odisha</label>
            </value>
            <value>
                <fullName>Punjab</fullName>
                <isActive>false</isActive>
                <label>Punjab</label>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Sikkim</fullName>
                <isActive>false</isActive>
                <label>Sikkim</label>
            </value>
            <value>
                <fullName>Tamil Nadu</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
                <isActive>false</isActive>
                <label>Telangana</label>
            </value>
            <value>
                <fullName>Uttarakhand</fullName>
                <isActive>false</isActive>
                <label>Uttarakhand</label>
            </value>
            <value>
                <fullName>Uttar Pradesh</fullName>
            </value>
            <value>
                <fullName>West Bengal</fullName>
                <isActive>false</isActive>
                <label>West Bengal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>