force-app/main/default/objects/Student__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <description>Select your stream</description>
    <label>Stream</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arts</fullName>
                <default>true</default>
                <label>Arts</label>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>